Sun Aug 24 15:51:12 1997  Mikael Djurfeldt  <mdj@kenneth>

	* configure.in (AC_CHECK_HEADERS): Test for rxposix.h,
	rx/rxposix.h.  Add library rx only if regcomp can't be found
	without it.

	* acconfig.h (HAVE_REGCOMP): Added it here since autoheader misses
	it for some reason!

Fri Aug 22 21:21:49 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* THANKS: New file.
	* Makefile.in, aclocal.m4, configure: Regenerated.

Wed Jul 23 20:24:27 1997  Mikael Djurfeldt  <djurf@zafir.e.kth.se>

	* configure.in: Added thread support for the alpha architecture.
	configure: Regenerated.

Thu Jul 17 07:56:05 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* configure.in: use AC_CHECK_FUNCS for sethostent etc.,
	so scmconfig.h is updated with the test results.  this may
	disable one of the cygwin hacks.

Fri Jul 11 00:18:19 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Changes to compile under gnu-win32, from Marcus Daniels:
	* configure.in: When sys/un.h exists, define HAVE_UNIX_DOMAIN_SOCKETS
	to indicate that Unix domain sockets will work.
	Check for socketpair, getgroups, setwent, pause, and tzset
	(cygwin currently lacks these them).
	Check for sethostent endhostent getnetent setnetent endnetent
	getprotoent endprotoent getservent endservent getnetbyaddr
	getnetbyname inet_lnaof inet_makeaddr inet_netof (cygwin currently
	lacks them).  In the case of cygwin, temporarily prefix these
	functions with "cygwin32_", the way that netdb.h does.
	Don't define HAVE_REGCOMP unless both regcomp and regex.h are
	available (cygwin b18 came distributed without a working regex.h
	file).
	* acconfig.h (HAVE_UNIX_DOMAIN_SOCKETS): Add this.
	* configure: Regenerated.

Wed Jul  2 12:28:40 1997  Tim Pierce  <twp@twp.tezcat.com>

	* ltmain.sh: Remove any trailing colon on $shlibpath_var
	(i.e. LD_LIBRARY_PATH) for braindamaged linkers that choke on it.
	Patch sent to bug-libtool.

Sat Jun 28 16:13:43 1997  Tim Pierce  <twp@twp.tezcat.com>
