@@ -1,5 +1,9 @@
 Sun Aug 24 15:51:12 1997  Mikael Djurfeldt  <mdj@kenneth>
 
+	* acinclude.m4 (GUILE_NAMED_CHECK_FUNC): New macro: Tagged test,
+	so that test for the same function can be performed multiple
+	times.
+
 	* configure.in (AC_CHECK_HEADERS): Test for rxposix.h,
 	rx/rxposix.h.  Add library rx only if regcomp can't be found
 	without it.
